# logic-theorist

./: README.md
logic-theorist/: README.md
python/: demo.py  logic_theorist.py  test_logic_theorist.py
rust/: Cargo.toml
rust/src/: expr.rs  lib.rs  main.rs  prover.rs
rust/tests/: integration.rs
